--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "start": "node src/index.js",
-    "start:dev": "nodemon --exec babel-node src/index.js"
+    "start:dev": "nodemon --exec babel-node src/index.js",
+    "up": "docker-compose up --build --remove-orphans",
+    "down": "docker-compose down"
   },
   "author": {
     "name": "Gregori Piñeres",
