Add MongoDB configuration

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+# API GraphQL environment
 PORT=3000
-EXTERNAL_PORT=3000
+EXTERNAL_PORT=3001
+
+# Mongoose environment
+MONGODB_USERNAME=graph
+# Generate a "secure" password with: openssl rand -base64 40
+MONGODB_PASSWORD=
+MONGODB_DATABASE=testing
+# MONGODB_LINK=host1:port1,host2:port2
+MONGODB_LINK=
