--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js",
-    "up": "docker-compose up --build --remove-orphans",
+    "up": "docker-compose up --no-build --remove-orphans",
     "stop": "docker-compose stop",
     "down": "docker-compose down"
   },
@@ -31,7 +31,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.15.0",
+    "connect-redis": "^4.0.4",
+    "express-session": "^1.17.1",
     "graphql": "^15.1.0",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "redis": "^3.0.2"
   }
 }
