--- a/package.json
+++ b/package.json
@@ -21,16 +21,10 @@
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "eslint": "^7.3.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "apollo-server": "^2.15.0",
+    "apollo-server-express": "^2.15.1",
     "connect-redis": "^4.0.4",
     "express-session": "^1.17.1",
     "graphql": "^15.1.0",
