Redis, jest, bcrypt and more

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # API GraphQL environment
 PORT=3000
+HOST=0.0.0.0
 EXTERNAL_PORT=3001
 
 # Mongoose environment
@@ -9,3 +10,13 @@ MONGODB_PASSWORD=
 MONGODB_DATABASE=testing
 # MONGODB_LINK=host1:port1,host2:port2
 MONGODB_LINK=
+
+# Redis environment
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Session environment
+# Generate a "secure" secrets with: openssl rand -base64 40
+SESSION_SECRET=
+SESSION_JWT_SECRET=
