--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ volumes:
     driver: local
   mongo-data:
     driver: local
+  redis-data:
+    driver: local
 
 services:
   graphql:
@@ -22,11 +24,10 @@ services:
     command: ["npm", "start"]
     depends_on:
       - mongodb
+      - redis
 
   mongodb:
     image: mongo:3.6-xenial
-    env_file:
-      - $PWD/.env
     environment:
       MONGO_INITDB_DATABASE: ${MONGODB_DATABASE}
       MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
@@ -34,3 +35,9 @@ services:
     volumes:
       - mongo-data:/data/db
       - $PWD/mongodb-init.sh:/docker-entrypoint-initdb.d/mongodb-init.sh
+
+  redis:
+    image: redis:6-alpine
+    command: ['--port', '${REDIS_PORT}', '--requirepass', '${REDIS_PASSWORD}']
+    volumes:
+      - redis-data:/data
