--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "start": "node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js",
-    "up": "docker-compose up --no-build --remove-orphans",
+    "up": "docker-compose up --remove-orphans",
     "stop": "docker-compose stop",
-    "down": "docker-compose down"
+    "down": "docker-compose down",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": {
     "name": "Gregori Piñeres",
@@ -21,10 +23,13 @@
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "nodemon": "^2.0.4"
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "apollo-server-express": "^2.15.1",
+    "bcryptjs": "^2.4.3",
     "connect-redis": "^4.0.4",
     "express-session": "^1.17.1",
     "graphql": "^15.1.0",
