Add support for auth using server-side session

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-# API GraphQL environment
+# App environment
+NODE_ENV=development
 PORT=3000
 HOST=0.0.0.0
 EXTERNAL_PORT=3001
 
-# Mongoose environment
+# MongoDB environment
 MONGODB_USERNAME=graph
 # Generate a "secure" password with: openssl rand -base64 40
 MONGODB_PASSWORD=
 MONGODB_DATABASE=testing
-# MONGODB_LINK=host1:port1,host2:port2
+# E.g: MONGODB_LINK=host1:port1,host2:port2
 MONGODB_LINK=
 
 # Redis environment
@@ -18,5 +19,6 @@ REDIS_PASSWORD=
 
 # Session environment
 # Generate a "secure" secrets with: openssl rand -base64 40
+SESSION_NAME=
 SESSION_SECRET=
 SESSION_JWT_SECRET=
