--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^2.15.1",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
     "express-session": "^1.17.1",
     "graphql": "^15.1.0",
     "mongoose": "^5.9.20",
